feat: implement get and insert data

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ kotlin.daemon.jvmargs=-Xmx2048M
 
 #Gradle
 org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8
+kotlin.native.cacheKind=none
 
 #Android
 android.nonTransitiveRClass=true
