--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ kotlin = "2.1.20"
 coilCompose = "3.1.0"
 coilNetworkOkhttp = "3.1.0"
 compose-multiplatform = "1.8.0"
+materialIconsExtended = "1.7.3"
 navigationCompose = "2.9.0-beta01"
 coil3 = "3.1.0"
 ktor = "3.0.3"
@@ -49,6 +50,7 @@ ktor-client-java = { group = "io.ktor", name = "ktor-client-java", version.ref =
 androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3Android" }
 androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
+material-icons-extended = { module = "org.jetbrains.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 sqlite-bundled = { module = "androidx.sqlite:sqlite-bundled", version.ref = "sqlite" }
 
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
